Feature/about page (#53)
* Current progress with the about page

* added department objects to data, began about page scss, began aboutHero

* reformat perks attr in department md files, add department list component

* Feature/about page styling next steps (#46)

* change roles attr to rolesList, change to square brackets

* in process of building departmentList component, currently working on getting images to show up

* trying to use childImageSharp for image import, committing to get feedback, currently compile error

* got images showing up!

* good styling progress - img sizing, padding, switching of flex direction

Co-authored-by: Peter Stone <pstone@andculture.com>

* font weight for list items

* about page is good to go except for adding it to nav and caret image in hero

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>
Co-authored-by: greg.evan@gmail.com <greg.evan@gmail.com>

* remove unnecessary class defn

* change left and right class names to more accuarte side-one side-two names

* Feature/about page finishing touches (#52)

* Development (#39)

* update link to next case study on edio case study (#33)

Co-authored-by: Peter Stone <pstone@andculture.com>

* AWE-147 Overall: em dash consistency (CCA, H1, Pulse) (#34)

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* add / to links to avoid 301 redirects (#35)

Co-authored-by: Peter Stone <pstone@andculture.com>

* robots.txt and sitemap.xml added for production builds using the gatsby plugins. (#36)

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* add revised edio hero for edio feature block (#37)

Co-authored-by: Peter Stone <pstone@andculture.com>

* AWE-123 tighten up margins on contact form (#38)

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

Co-authored-by: Peter Stone <42245052+Peter-G-Stone@users.noreply.github.com>
Co-authored-by: Peter Stone <pstone@andculture.com>
Co-a

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -210,6 +210,22 @@ collections:
       - {label: "Priority", name: "priority", widget: "number", valueType: "int"}
       - {label: "Description", name: "description", widget: "text"}
 
+  - name: "departments"
+    label: "Departments"
+    label_singular: "Department"
+    folder: "src/data/departments"
+    create: true
+    identifier_field: "name"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "department"}
+      - {label: "Create Page", name: "createPage", widget: "hidden", default: false}
+      - {label: "Name", name: "name", widget: "string"}
+      - {label: "Priority", name: "priority", widget: "number", valueType: "int"}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Roles", name: "rolesList", widget: "list"}
+      - {label: "Department Illustration", name: "deptImg", widget: image}
+
+
   - name: "pages"
     label: "Pages"
     files:
