Added team images

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -141,6 +141,20 @@ collections:
         fields:
          - {label: "Image", name: "image", widget: "image"}
          - {label: "Description", name: "description", widget: "string"}
+      - label: "Team Grid Photo"
+        name: "teamGridPhoto"
+        required: false
+        widget: "object"
+        fields:
+         - {label: "Image", name: "image", widget: "image"}
+         - {label: "Description", name: "description", widget: "string"}
+      - label: "Team Expanded Photo"
+        name: "teamExpandedPhoto"
+        required: false
+        widget: "object"
+        fields:
+         - {label: "Image", name: "image", widget: "image"}
+         - {label: "Description", name: "description", widget: "string"}
       - label: "Social Links"
         label_singular: "Link"
         name: "socialLinks"
