--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "andculture-2020",
   "description": "andculture website",
   "version": "1.0.0",
-  "author": "Zach McCleaf, Ralph McIntyre",
+  "author": "Zach McCleaf, Ralph McIntyre, Aaron Weinberger, Peter Stone",
   "dependencies": {
     "@mdx-js/mdx": "^1.5.7",
     "@mdx-js/react": "^1.5.7",
@@ -33,7 +33,7 @@
     "gatsby-source-filesystem": "^2.0.26",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.1.9",
-    "gsap": "^3.1.1",
+    "gsap": "^3.5.1",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.9.6",
