--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     "andculturecode.scss.rhythm": "^1.0.2",
     "babel-eslint": "^10.0.3",
     "gatsby-plugin-root-import": "^2.0.5",
-    "prettier": "^1.15.3"
+    "prettier": "2.1.2"
   }
 }
