--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-google-tagmanager": "^2.2.1",
+    "gatsby-plugin-hubspot": "^1.3.4",
     "gatsby-plugin-mdx": "^1.0.75",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.1.6",
